<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="env_DEV">Dev</string>
    <string name="env_TEST">Test</string>
    <string name="env_STAGING">Staging</string>
    <string name="env_PRODUCTION">Production</string>

    <string name="add_app">New APP</string>
    <string name="edit_app">Edit APP</string>

    <string name="app_name">OBLOG</string>
    <string name="open_banking">Open Banking</string>
    <string name="open">Open</string>
    <string name="banking">Banking</string>
    <string name="log">Log</string>
    <string name="add_tpp">New TPP</string>
    <string name="edit_tpp">Edit TPP</string>
    <string name="tpp_marked_followed">TPP marked Followed</string>

    <string name="label_country">Country</string>
    <string name="label_pass_countries">Home country</string>
    <string name="label_entity_code">Entity code</string>
    <string name="label_entity_address">Entity address</string>
    <string name="label_entity_authorization_start">Authorization Start</string>
    <string name="label_entity_authorization_end">Authorization End</string>
    <string name="label_entity_city_of_residence">City of residence</string>
    <string name="label_entity_names">Entity names</string>
    <string name="label_national_ref_code">National ref. code</string>
    <string name="label_tpp_services">Servicess</string>
    <string name="label_role">Role</string>
    <string name="label_roles">Roles</string>
    <string name="label_psd2_role">PSD2 role</string>
    <string name="label_license_revoked">Revoked</string>
    <string name="label_revoked">Show revoked</string>
    <string name="label_revoked_only">Show revoked only</string>
    <string name="label_passports">Passports</string>
    <string name="label_all">All TPPs</string>
    <string name="label_used">Used TPPs</string>
    <string name="label_followed">Followed TPPs</string>
    <string name="label_following">Following</string>
    <string name="label_using">Using</string>
    <string name="label_name">Tpp name</string>
    <string name="label_home_country">Home country</string>
    <string name="label_description">Description</string>
    <string name="label_services">Services</string>
    <string name="label_app_name">Application name</string>
    <string name="label_app_description">OBLog TppWatch mobile app is a tool for monitoring TPP\'s authorization status as maintained by corresponding NCA and provided by EBA TPP registry.</string>
    <string name="label_app_flags">Flags</string>
    <string name="label_app_psd2">PSD2</string>
    <string name="label_app_home">Web home</string>
    <string name="tpps_registered_all_number">Displaying all %1$d registered TPPs</string>
    <string name="tpps_registered_filtered_number">Displaying %1$d TPPs, out of %2$d registered TPPs (filtered)</string>

    <string name="tpp_applications">Applications</string>
    <string name="tpp_marked_used">TPP marked used</string>
    <string name="tpp_marked_unused">TPP marked unused</string>
    <string name="loading_tpps_error">Error while loading TPPs. Data displayed may be altered in registry.</string>
    <string name="followed_tpps_cleared">Followed TPPs cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="load_from_server">Reload from server</string>
    <string name="preferences_title">Preferences</string>
    <string name="menu_delete_tpp">Delete TPP</string>
    <string name="navigation_view_header_title">OBLOG</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter TPP name here.</string>
    <string name="empty_tpp_message">TPPs cannot be empty</string>
    <string name="empty_app_message">Application name cannot be empty</string>
    <string name="empty_app_desc_message">Application description cannot be empty</string>
    <string name="successfully_saved_tpp_message">TPP saved</string>
    <string name="tpp_directory_title">TPPs Directory</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tpps">You have no TPPs.</string>
    <string name="statistics_used_tpps">Used TPPs: %.1f%%</string>
    <string name="statistics_followed_tpps">Followed TPPs: %.1f%%</string>
    <string name="statistics_total_tpps">Total number of TPPs: %1$d, from which:</string>
    <string name="statistics_total_aisp">AISPs: %1$d</string>
    <string name="statistics_total_pisp">PISPs: %1$d</string>
    <string name="statistics_total_emi">EMIs: %1$d</string>
    <string name="statistics_authorized_label">Authorized:</string>
    <string name="statistics_this_year">This calendar year: %1$d</string>
    <string name="statistics_last_year">Within last 365 days: %1$d</string>
    <string name="statistics_last_month">Within last 30 days: %1$d</string>
    <string name="statistics_last_week">Within last 7 days: %1$d</string>
    <string name="statistic_graphs">Statistics graph type:</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="statistics_date">Statistics calculated on %1$td</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string name="nav_all">All</string>
    <string name="nav_used_only">Used only</string>
    <string name="nav_followed">Followed</string>

    <string name="no_tpps_all">No TPPs available!</string>
    <string name="no_tpps_used">No used TPPs selected!</string>
    <string name="no_tpps_followed">You have no followed TPPs!</string>
    <string name="refresh">Refresh</string>
    <string name="successfully_deleted_tpp_message">TPP was deleted</string>
    <string name="successfully_added_tpp_message">TPP added</string>
    <string name="tpps_header_image_content_description">TPPs header image</string>

    <!-- Content Descriptions -->
    <string name="no_tpps_image_content_description">No TPPs image</string>
    <string name="oblog_web_base_url">https://www.oblog.org/</string>-->

    <string name="reset_name_filter">Reset name filter</string>

    <string name="search_title">search</string>
    <string name="search_hint">Filter TPPs by name2</string>
    <string name="search_revoked">Revoked only</string>
    <string name="title_activity_settings">Settings</string>

    <string name="messages_header">Messages</string>

    <string name="sync_header">Sync</string>
    <string name="user_consents">Consents</string>
    <string name="user_misc">Misc</string>

    <string name="user_signature">Your signature</string>
    <string name="psd2_services_only">PSD2 TPPs only</string>
    <string name="banks_as_psd2">Banks as PSD2 PSPs</string>

    <string name="user_id_title">User ID</string>
    <string name="actual_env_title">Actual environment</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync SPs directory periodically</string>

    <!-- Preference Titles -->
    <string name="anonymous_location">Anonymous location</string>
    <string name="allow_location_on">Youd location will be anonymously shared with our server
    </string>

    <!-- Messages Preferences -->
    <string name="allow_location_off">Switch On to allow sending your location anonymously</string>
    <string name="settings_no_tpps">No TPPs found</string>
    <string name="settings_followed_tpps">Followed TPPs</string>
    <string name="settings_used_tpps">Used TPPs</string>
    <string name="environments">Environments</string>
    <string name="user_account">Account</string>
    <string name="label_fis">FIs (banks, MI) only</string>
    <string name="no_fis_tpps">No financial institutions</string>
    <string name="label_psd2_only">TPPs with PSD2 only</string>
    <string name="no_psd2_only">No TPPs with PSD2 license only</string>
    <string name="no_revoked_tpps">No revoked institutions</string>
    <string name="U">U</string>
    <string name="F">F</string>
    <string name="about_menu_item">About</string>
    <string name="about_header">About OBLOG</string>
    <string name="about_content">Open Banking Log (OBLog) - helps its users to make informed decisions when dealing with financial tools operated by Third Party Providers. </string>
    <string name="anonymous_usage">Send anonymous usage statistics</string>
    <string name="show_intro_on_next_run">Show intro on next run</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>

    <string name="label_onbording_introduction">Welcome</string>
    <string name="label_onboarding_features">OBLOG features</string>
    <string name="label_onboarding_disclaimer">Disclaimer</string>
    <string name="label_onboarding_start_using">Start using</string>

    <string name="onboarding_label_1">Welcome to Open Banking LOG!</string>
    <string name="onboarding_label_2">Browse European FI registries</string>
    <string name="onboarding_label_3">Analyze statistics</string>
    <string name="onboarding_label_4">OBLOG</string>

    <string name="onboarding_description_1">OBLOG - Know Your Financial Services Provider</string>
    <string name="onboarding_description_2">Browse, Search, Filter European FI registries, Get TPP details...</string>
    <string name="onboarding_description_3">Get statistics, analyze data - anywhere, anytime</string>
    <string name="onboarding_description_4">OBLOG SOFTWARE IS PROVIDED BY THE AUTHOR FREE OF CHARGE, \`\`AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. ALL DATA DISPLAYED IS COLLECTED FROM PUBLICLY AVAILABLE SOURCES.</string>

    <string name="tag_intro_indicator">intro_indicator_</string>
    <string name="indicator_image">Indicator image</string>
    <string name="label_onbording_start_using">Start using</string>
    <string name="label_intro_next">Next</string>
    <string name="label_intro_prev">Prev</string>
    <string name="country_it">IT</string>
    <string name="country_hu">HU</string>
    <string name="country_hr">HR</string>
    <string name="country_fr">FR</string>
    <string name="country_es">ES</string>
    <string name="country_dk">DK</string>
    <string name="country_de">DE</string>
    <string name="country_cz">CZ</string>
    <string name="country_bg">BG</string>
    <string name="country_at">AT</string>
    <string name="country_pl">PL</string>
    <string name="country_ro">RO</string>
    <string name="country_se">SE</string>
    <string name="country_sk">SK</string>
    <string name="country_sl">SL</string>
    <string name="country_uk">UK</string>
    <string name="label_entity_version">EBA entity version</string>
    <string name="resource_not_found">RESOURCE_NOT_FOUND</string>

</resources>
