...
            android:textColor="@color/colorEURed"
            android:text="!"
            android:visibility="@{tpp.ebaEntity.isRevoked() ? View.VISIBLE:View.GONE}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <CheckBox
            android:id="@+id/follow_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:width="32dp"
            android:height="32dp"
            android:checked="@{tpp.ebaEntity.followed}"
            android:onClick="@{(view) -> viewmodel.followTpp(tpp, ((CompoundButton)view).isChecked())}"
            android:textSize="10sp" />
        <!--<CheckBox
            android:id="@+id/used_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="@{tpp.ebaEntity.used}"
            android:textSize="12sp"
            android:onClick="@{(view) -> viewmodel.activateTpp(tpp, ((CompoundButton)view).isChecked())}" />-->
...
