...
        android:id="@+id/group_watching"
        android:checkableBehavior="all">
        <item
            android:id="@+id/followed"
            android:checkable="true"
            android:checked="false"
            android:title="@string/nav_followed_only" />
        <item
            android:id="@+id/used"
            android:checkable="true"
            android:checked="false"
            android:title="@string/nav_used_only" />
    </group>
...
