...
                            android:orientation="vertical"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp"
                            android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/tpps_list"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:items="@{viewmodel.displayedItems}"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                        </LinearLayout>

...
